# tmnl

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  README.md  TODO.md  cliff.toml  dist-workspace.toml  run.sh  start-launcher.sh
.claude/: settings.json
.claude/agents/: code-reviewer.md  doc-updater.md  protocol-reviewer.md  renderer-reviewer.md  test-writer.md
.claude/hooks/: cargo-fmt-if-rust.sh
.claude/skills/build-app/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/fake-protocol/: SKILL.md
.claude/skills/run/: SKILL.md
.claude/skills/smoke/: SKILL.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  build-setup.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-setup.yml  bump-homebrew-tap.yml  ci.yml  package-linux.yml  release-artifacts.yml  release-plz.yml  release.yml  winget-releaser.yml
.local/: PLAN.md
docs/: COMMAND_MIGRATION.md  notarization.md  sdk-guide.md  shell-integration.md  splits-plan.md
examples/: fake_client.rs  fake_server.rs  hello_client.rs
findings/hybrid-2026-06-09/: report.md
findings/hybrid-2026-06-10/: report.md
findings/keyboard-only-2026-06-09/: report.md
findings/mouse-only-2026-06-09/: report.md
findings/mouse-only-2026-06-10/: report.md
findings/vert-tabs-hunt-2026-06-08/: findings.md
nfpm/: tmnl.yaml
scripts/: Info-nightly.plist  Info.plist  build-app.sh  build-dmg.sh  check-docs-sync.sh  dist-check.sh  launcher-nightly.sh  notarize-dmg.sh  send-release-newsletter.sh
scripts/demos/: README.md  drive-native-tabs.scpt  record-native-tabs.sh
scripts/icon/: AppIcon-nightly.icns  AppIcon.icns  build.sh  gen_icon.swift
scripts/linux/: install.sh  tmnl.desktop
shell-integration/: tmnl.zsh
site/: .docs-sync-marker  astro.config.mjs  package-lock.json
site/scripts/og/: gen_og.swift
site/src/content/docs/: changelog.mdx  family.mdx  getting-started.md  index.mdx  install.md  install.mdx  troubleshooting.md
site/src/content/docs/manual/: ai-completion.mdx  browser-pane.mdx  getting-started.mdx  native-tabs.mdx  running-mnml.md  tab-layout.mdx  tabs-and-splits.mdx  updates.md
site/src/styles/: install.css
src/: app.rs  atlas.rs  cell.wgsl  command.rs  config.rs  family_offer.rs  fim.rs  grid.rs  headless.rs  help.rs  keymap.rs  launcher.rs  layout.rs  main.rs  menu.rs  notify.rs  osc133.rs  palette.rs  pipeline.rs  recents.rs  server.rs  settings_ui.rs  shell.rs  shell_prompt.rs  strip.wgsl  theme.rs  transfer.rs  update_check.rs  welcome.rs
themes/: mnml-prompt.sh
wix/: main.wxs
