[package]
name = "tmnl-rs"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "A GPU-rendered terminal for macOS — and a structured-cell display surface that apps can draw to directly."
authors = ["Chris McLennan"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/chris-mclennan/tmnl-rs"
homepage = "https://github.com/chris-mclennan/tmnl-rs"
documentation = "https://docs.rs/tmnl-rs"
readme = "README.md"
keywords = ["terminal", "wgpu", "gpu", "macos", "tui"]
categories = ["gui", "command-line-utilities"]
exclude = [".local/", ".claude/", ".github/", "assets/", "scripts/"]

# The crate publishes as `tmnl-rs` (the bare `tmnl` name was unavailable),
# but the binary stays `tmnl` — `cargo install tmnl-rs` gives you `tmnl`.
[[bin]]
name = "tmnl"
path = "src/main.rs"

[dependencies]
winit = "0.30"
wgpu = "23"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
fontdue = "0.9"
bytemuck = { version = "1", features = ["derive"] }
tmnl-protocol = { path = "../tmnl-protocol", version = "0.0.2" }
# Embedded local AI command completion (qwen2.5-coder via candle). Kept
# as its own crate so candle's large dependency tree compiles once and
# tmnl's incremental rebuilds don't recompile it. First build is slow.
fim-engine = { path = "../fim-engine", version = "0.1.0" }
# Shell mode — host a real pty + parse its output into cells. Versions match
# what mnml's pty_pane uses so we share one source-of-truth in the workspace.
vt100 = "0.16"
portable-pty = "0.8"
# Native macOS menu bar (tmnl / Shell / Edit / View / Window / Help).
# Same crate version as mixr-rs so we share one source-of-truth.
muda = "0.16"
# Config persistence — `~/.config/tmnl/config.toml`.
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
serde = { version = "1", features = ["derive"] }
dirs = "6"
# Used by the pty-fd handoff receiver — `ioctl(TIOCSWINSZ)` on adopted
# pty masters (resizing them via portable-pty's MasterPty trait isn't
# possible because we don't construct the master, we adopt it from the
# sender). Unix-only; tmnl is mac-first anyway.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Sandboxed temp dirs for tests that touch `$HOME` / `$XDG_CONFIG_HOME`
# — used by `shell_prompt::tests` to avoid littering the real
# `~/.config/mnml/`.
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
